requirejs, less boilerplate in modules, radi.js updated

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="radi.js"></script>
-        <script src="splitbox.js"></script>
-        <script src="app.js"></script>
-        <title>SplitBox Demo</title>
+        <script data-main="main.js" src="require.js"></script>
+        <title>children</title>
     </head>
-    <body onload="sbApp.go()"/>
+    <body/>
 </html>
